# total-coverage-talk

./: .coverage  pyproject.toml  subscriptions.db
diagrams/: 2tier.puml  2tier_with_gateway.puml  modularized_clean_architecture.puml
slides_code/: .coverage  auto_test.py  rewrite_tricky_lack_of_coverage.py  test_better_rewrite_tests.py  test_branch_hole.py  test_doctor_queue_1.py  test_doctor_queue_2.py  tests_lacking_rigcz.py
slides_code/branch_cov_cant_find_this/: __init__.py
slides_code/doctor_queue/: determine.py
subscriptions/: anonymization.py  api.py  db.py  models.py  payments_gateway.py
tests/acceptance/: conftest.py  test_storing_payment_card.py  test_storing_payment_card_with_external_system.py
